# manufacturing-car-manual-RAG

./: .gitignore  BROWSE_OPTIMIZATION_SUMMARY.md  CLAUDE.md  Car Manual Data Ingestion Notebook.ipynb  FRAMEWORK_README.md  LICENSE  PDF_INTEGRATION.md  README-BACKEND.md  README.md  SEARCH_ARCHITECTURE.md  docker-compose.yml  ford_terms.json  makefile
backend/: Data Models.md  Main App.md  Search-Implementation.md  main.py  pyproject.toml
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  chunks.py  configuration.py  health.py  search.py
backend/app/core/: config.py
backend/app/db/: mongodb.py
backend/app/db/repositories/: chunks.py  search.py  search_new.py
backend/app/models/: chunks.py  search.py
backend/app/services/: embedding.py  rag.py
backend/config/: config.json
backend/db/: mdb.py
config/: app.config.json  car-manual-config.json  mongodb-brand-config.json
examples/: aviation-config.json  manufacturing-config.json
frontend/: DEMO_SCRIPT.md  THIRD-PARTY-NOTICES.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/admin/: page.tsx
frontend/app/browse/: page.tsx
frontend/app/search/: page.tsx
frontend/components/common/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx
frontend/constants/: appConstants.ts
frontend/contexts/: ConfigContext.tsx
frontend/hooks/: useChunks.ts  useRAG.ts  useSearch.ts
frontend/lib/: mongodb.js
frontend/services/: api.ts  searchService.ts
frontend/types/: API.ts  Chunk.ts  Search.ts
(+23 files in other folders)
