[tool.poetry]
name = "your-virtual-env"
version = "0.1.0"
description = "Car Manual Hybrid Search + RAG"
authors = ["Mehar Grewal <mehar.grewal@mongodb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
google-cloud-aiplatform = "^1.40.0"
vertexai = "^0.0.1"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
pip-licenses = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
